--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@prisma/client": "^5.22.0",
     "astro": "^5.9.3",
+    "bcryptjs": "^2.4.3",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "prisma": "^5.12.0",
     "tailwindcss": "^3.4.1"
   }
 }
