--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.4.0",
     "@astrojs/react": "^4.3.0",
     "@prisma/client": "^5.22.0",
     "astro": "^5.9.3",
